<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/lt_loadingbg"
        android:orientation="vertical" >
   		<ImageView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:layout_marginTop="50dp"
        	android:src="@drawable/logo_title"/>
   		
        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_back"
            android:paddingBottom="10dp"
            android:paddingTop="21dp" >


            <EditText
                android:id="@+id/edtusr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@+id/faceImg"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtusr"
                android:layout_alignLeft="@+id/edtusr"
                android:layout_alignTop="@+id/edtusr"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtusr"
                android:layout_alignRight="@+id/edtusr"
                android:layout_alignTop="@+id/edtusr"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/clearaccount" />

            <EditText
                android:id="@+id/edtpsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edtusr"
                android:layout_alignRight="@+id/edtusr"
                android:layout_below="@+id/edtusr"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="5dp"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtpsd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/edtpsd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <CheckBox
                android:id="@+id/login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/login"
                android:button="@drawable/qq_btn_check"
                android:checked="true"
                android:paddingLeft="25dp"
                android:text="@string/opt_remember"
                android:textColor="#ff222222"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="130dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView02"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="12dp"
                android:text="@string/login" />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:stretchColumns="1" >

            <TableRow>


                <CheckBox
                    android:id="@+id/slient"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_silent"
                	android:paddingLeft="25dp"
                    android:textColor="#ff222222" 
                	android:textSize="16.0sp" />

                <CheckBox
                    android:id="@+id/openvibra"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/opt_openVibra"
                	android:paddingLeft="25dp"
                    android:textColor="#ff222222" 
                	android:textSize="16.0sp" />
            </TableRow>
        </TableLayout>
<!--  
        <Button
            android:id="@+id/testbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:text="测试模式" />
-->
    </LinearLayout>

</LinearLayout>